# highwayhasher

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  rollup.config.js  tsconfig.json  vite.node.config.ts
.config/: mise.toml
.github/workflows/: ci.yml  compressed-size.yml  verifier.yml
assets/: build-native.sh  download-releases.sh
bench/: README.md  index.js  package.json
common/src/: lib.rs
e2e/: hash.test.js  package.json
native/: Cargo.toml
native/src/: lib.rs
src/: index_browser.ts  index_node.ts  model.ts  native.ts  web.ts
src/common/: Cargo.toml
src/common/src/: lib.rs
src/main/: common.ts  index_browser_fat.ts  index_browser_slim.ts  index_node.ts  model.ts  native.ts  wasm.ts  web.ts
src/native/: Cargo.toml
src/native/src/: lib.rs
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
src/web/: Cargo.toml
test/: hash.test.js  usage.ts
tests/: hash.bench.ts  hash.test.ts
tests/e2e/: README.md  hash.test.js  package.json
tests/unit/: hash.test.js  hash.test.ts  usage.ts
tests/verifier/: package.json  pre.js
verifier/: README.md  package.json  pre.js
web/: Cargo.toml
web/src/: lib.rs
