[package]
name = "highwayhasher"
version = "0.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
highway = "1.2.0"
napi = "=2.16.13"
napi-derive = "=2.16.13"
common = { path = "../common" }

[build-dependencies]
napi-build = "=2.1.4"
