[package]
name = "highwayhasher-wasm"
version = "0.1.0"
authors = ["nickbabcock <nbabcock19@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
highway = { version = "0.8", default-features = false }
common = { path = "../common" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
